WIP: begin adding dynamic middleware, so each app cas register webservices, websocket, frontend app, static files...

--- a/src/DevelopmentApps/NetDaemon.DevelopmentApps.csproj
+++ b/src/DevelopmentApps/NetDaemon.DevelopmentApps.csproj
@@ -32,8 +32,20 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.0" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="apps\Dependencies\ClientApp\*" />
+    <EmbeddedResource Include="apps\Dependencies\ClientApp\*" />
+  </ItemGroup>
+
   <PropertyGroup>
     <CodeAnalysisRuleSet>..\..\.linting\roslynator.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
