--- a/src/Daemon/NetDaemon.Daemon/NetDaemon.Daemon.csproj
+++ b/src/Daemon/NetDaemon.Daemon/NetDaemon.Daemon.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="JoySoftware.HassClient" Version="21.46.0-beta" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="YamlDotNet" Version="11.2.1" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
     <PackageReference Include="Roslynator.Analyzers" Version="3.2.2">
