Add multiple middleware registration at runtime with uncongiruration system Unregister middlewares app disable

--- a/src/DevelopmentApps/NetDaemon.DevelopmentApps.csproj
+++ b/src/DevelopmentApps/NetDaemon.DevelopmentApps.csproj
@@ -43,6 +43,7 @@
 
   <ItemGroup>
     <None Remove="apps\Dependencies\ClientApp\*" />
+    <EmbeddedResource Include="apps\Dependencies\ClientApp2\index.html" />
     <EmbeddedResource Include="apps\Dependencies\ClientApp\*" />
   </ItemGroup>
 
